--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Playground</title>
 </head>
 <body>
-    <canvas id="canvas" width="800" height="600"></canvas>
+    <h1>Newton's Cradle</h1>
+    <canvas id="canvas" width="800" height="600" style="overflow: hidden;"></canvas>
 
     <script src="HotSoupScript/Private/ModulesLoader.js"></script>
     
