--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
-    <!-- Prevent scaling for touch panels -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playground</title>
 </head>
 <body>
-    <h1>Newton's Cradle</h1>
+    <canvas id="canvas" width="800" height="600"></canvas>
 
     <script src="HotSoupScript/Private/ModulesLoader.js"></script>
     
