--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Playground</title>
 </head>
 <body>
+    <h1>Newton's Cradle</h1>
     <canvas id="canvas" width="800" height="600"></canvas>
 
     <script src="HotSoupScript/Private/ModulesLoader.js"></script>
