--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Playground</title>
+    <title>Newton's Cradle</title>
 </head>
 <body>
     <h1>Newton's Cradle</h1>
@@ -16,4 +16,9 @@
 
     <script src="HotSoupScript/Private/MainCaller.js"></script>
 </body>
+<style>
+    canvas {
+        border: 1px solid black;
+    }
+</style>
 </html>
