--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <h1>Newton's Cradle</h1>
     <canvas id="canvas" width="800" height="600"></canvas>
 
+    <p>
+        <h2>Desciptions</h2>
+        This is a simulation by Descrete Element Method (DEM) of Newton's Cradle.  
+
+        <h3>What you can do:</h3>
+        Click & drag the ball or string-pin to move it, and have fun.  
+        You can also adjust below:
+    </p>
+
+    <h2>Parameters</h2>
+
     <script src="HotSoupScript/Private/ModulesLoader.js"></script>
     
     <!-- Write your main code here -->
